photos page 96% done

--- a/client/src/pages/PhotosPage.css
+++ b/client/src/pages/PhotosPage.css
@@ -281,3 +281,13 @@
     gap: 16px;
   }
 }
+ .mojj{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    align-items: center;
+    color: white;
+    font-size: 14px;
+    margin-top: 5px;
+  }
+ 
