--- a/client/src/pages/PhotosPage.css
+++ b/client/src/pages/PhotosPage.css
@@ -291,3 +291,11 @@
     margin-top: 5px;
   }
  
+  .h2{
+    color: white;
+    margin-bottom: 10px;
+  }
+  .h4{
+    color: #b0b3c1;
+    margin-bottom: 30px;
+  }
